# Coreum_Raffle_Site

./: .gitignore  ENVIRONMENT_SETUP.md  README.md  check-wallet.js
backend/: AUTOMATION_SETUP.md  README.md  package.json
backend/src/: app.js  db.js  index.js
backend/src/config/: database.js  logger.js
backend/src/models/: Participant.js  Raffle.js
backend/src/routes/: raffles.js  system.js
backend/src/services/: automation.js  blockchain.js  indexer.js  raffle-contract.js
contracts/raffle/: Cargo.toml
contracts/raffle/src/: contract.rs  lib.rs  msg.rs  state.rs
frontend/: angular.json  configure-contract.ps1  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
frontend/src/app/components/create-raffle/: create-raffle.component.html  create-raffle.component.scss  create-raffle.component.ts
frontend/src/app/components/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/components/join-raffle/: join-raffle.component.html  join-raffle.component.scss  (+1 more)
frontend/src/app/data/: mock-data.ts
frontend/src/app/models/: participant.model.ts  raffle.model.ts  user.model.ts  wallet.model.ts
frontend/src/app/services/: api.service.ts  blockchain-nft.service.ts  leap-wallet.service.ts  raffle-contract.service.ts  raffle.service.ts  user-role.service.ts  wallet.service.ts
(+15 files in other folders)
